--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -656,6 +656,46 @@
   keywords = {Climatic changes,plant ecophysiology,Vegetation and climate}
 }
 
+@article{bowmanWarmerWorldWill2014,
+  title = {A Warmer World Will Reduce Tree Growth in Evergreen Broadleaf Forests: Evidence from {{Australian}} Temperate and Subtropical Eucalypt Forests},
+  shorttitle = {A Warmer World Will Reduce Tree Growth in Evergreen Broadleaf Forests},
+  author = {Bowman, David M. J. S. and Williamson, Grant J. and Keenan, R. J. and Prior, Lynda D.},
+  date = {2014},
+  journaltitle = {Global Ecology and Biogeography},
+  volume = {23},
+  pages = {925--934},
+  issn = {1466-8238},
+  doi = {10.1111/geb.12171},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/geb.12171},
+  urldate = {2021-06-09},
+  abstract = {Aims Understanding how tree growth is influenced by climate is vital for predicting how forests will respond to climate change, yet there have been few studies of tree growth spanning macroclimatic gradients. The aim of this study is to correlate growth of a single lineage of broadleaf evergreen trees with continental-scale variability in climate. Location Australia's temperate mesic eucalypt forests, spanning latitudes from 23 to 43° S and longitudes from 115 to 153° E. Methods We compiled and analysed a dataset containing around half a million measurements of growth in eucalypt tree diameter, collected from 2409 permanent forestry plots. These plots spanned a range of 558–2105 mm mean annual precipitation and 6–22 °C mean annual temperature. Generalized additive models were used to study the relationship between growth in tree diameter and several temperature and water availability variables. Results Tree growth increased with precipitation, but with a diminishing response above a mean annual precipitation of 1400 mm. There was a peaked response to temperature, with maximum growth occurring at a mean annual temperature of 11 °C and maximum temperature of the warmest month of 25–27 °C. Lower temperatures directly constrain growth. High temperatures primarily reduced growth by reducing water availability, but they also appeared to exert a direct negative effect. Our best model, which included maximum temperature of the warmest month and the ratio of precipitation to evaporation, explained 28\% of the deviance. Main conclusions The productivity of Australia's temperate eucalypt forests could decline substantially as the climate warms, given that 87\% of these forests currently experience a mean annual temperature above 11 °C, where the highest growth rates were observed. This will reduce carbon sequestration and slow recovery after catastrophic disturbances such as wildfire.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/geb.12171},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\TTKQZ6X8\\Bowman et al. - 2014 - A warmer world will reduce tree growth in evergree.pdf},
+  keywords = {Climatic gradients,macroecology,precipitation,temperature,tree growth,water availability},
+  langid = {english},
+  number = {8}
+}
+
+@article{bowmanWarmerWorldWill2014a,
+  title = {A Warmer World Will Reduce Tree Growth in Evergreen Broadleaf Forests: Evidence from {{Australian}} Temperate and Subtropical Eucalypt Forests},
+  shorttitle = {A Warmer World Will Reduce Tree Growth in Evergreen Broadleaf Forests},
+  author = {Bowman, David M. J. S. and Williamson, Grant J. and Keenan, R. J. and Prior, Lynda D.},
+  date = {2014},
+  journaltitle = {Global Ecology and Biogeography},
+  volume = {23},
+  pages = {925--934},
+  issn = {1466-8238},
+  doi = {10.1111/geb.12171},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/geb.12171},
+  urldate = {2021-06-09},
+  abstract = {Aims Understanding how tree growth is influenced by climate is vital for predicting how forests will respond to climate change, yet there have been few studies of tree growth spanning macroclimatic gradients. The aim of this study is to correlate growth of a single lineage of broadleaf evergreen trees with continental-scale variability in climate. Location Australia's temperate mesic eucalypt forests, spanning latitudes from 23 to 43° S and longitudes from 115 to 153° E. Methods We compiled and analysed a dataset containing around half a million measurements of growth in eucalypt tree diameter, collected from 2409 permanent forestry plots. These plots spanned a range of 558–2105 mm mean annual precipitation and 6–22 °C mean annual temperature. Generalized additive models were used to study the relationship between growth in tree diameter and several temperature and water availability variables. Results Tree growth increased with precipitation, but with a diminishing response above a mean annual precipitation of 1400 mm. There was a peaked response to temperature, with maximum growth occurring at a mean annual temperature of 11 °C and maximum temperature of the warmest month of 25–27 °C. Lower temperatures directly constrain growth. High temperatures primarily reduced growth by reducing water availability, but they also appeared to exert a direct negative effect. Our best model, which included maximum temperature of the warmest month and the ratio of precipitation to evaporation, explained 28\% of the deviance. Main conclusions The productivity of Australia's temperate eucalypt forests could decline substantially as the climate warms, given that 87\% of these forests currently experience a mean annual temperature above 11 °C, where the highest growth rates were observed. This will reduce carbon sequestration and slow recovery after catastrophic disturbances such as wildfire.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/geb.12171},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\G2HSGCWG\\Bowman et al. - 2014 - A warmer world will reduce tree growth in evergree.pdf;C\:\\Users\\Me\\Zotero\\storage\\WLD6L796\\geb.html},
+  keywords = {Climatic gradients,macroecology,precipitation,temperature,tree growth,water availability},
+  langid = {english},
+  number = {8}
+}
+
 @article{brasseurEXTINCTIONRAYONNEMENTDANS1976,
   title = {L'{{EXTINCTION DU RAYONNEMENT DANS LES GAMMES SPECTRALES BLEU}}, {{ROUGE ET ROUGE LOINTAIN}}. {{COMPARAISON DE DEUX PEUPLEMENTS FORESTIERS DE HAUTE ARDENNE}}},
   author = {BRASSEUR, F. and DE SLOOVER, J. R.},
@@ -1609,6 +1649,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\KAG9IUG6\\Duffy et al. - 2021 - How close are we to the temperature tipping point .pdf;C\:\\Users\\Me\\Zotero\\storage\\WN8NC8FI\\eaay1052.html},
   langid = {english},
   number = {3}
+}
+
+@article{dulamsurenIncreasedSummerTemperatures2013,
+  title = {Increased {{Summer Temperatures Reduce}} the {{Growth}} and {{Regeneration}} of {{Larix}} Sibirica in {{Southern Boreal Forests}} of {{Eastern Kazakhstan}}},
+  author = {Dulamsuren, Choimaa and Wommelsdorf, Tobias and Zhao, Fengjun and Xue, Yaoqin and Zhumadilov, Bulat Z. and Leuschner, Christoph and Hauck, Markus},
+  date = {2013-12-01},
+  journaltitle = {Ecosystems},
+  volume = {16},
+  pages = {1536--1549},
+  issn = {1435-0629},
+  doi = {10.1007/s10021-013-9700-1},
+  url = {https://doi.org/10.1007/s10021-013-9700-1},
+  urldate = {2021-06-09},
+  abstract = {The larch forests at the southern limit of the Siberian boreal forest in Central Asia have repeatedly experienced strong recent growth declines attributed to decreasing summer precipitation in the course of climate warming. Here, we present evidence from the southernmost Larix sibirica forests in eastern Kazakhstan that these declines are primarily caused by a decrease in effective moisture due to increasing summer temperatures, despite constant annual, and summer precipitation. Tree-ring chronologies ({$>$}800 trees) showed a reduction by 50–80\% in mean ring width and an increase in the frequency of missing rings since the 1970s. Climate-response analysis revealed a stronger (negative) effect of summer temperature (in particular of the previous year’s June and July temperature) on radial growth than summer precipitation (positive effect). It is assumed that a rise in the atmospheric vapor pressure deficit, which typically increases with temperature, is negatively affecting tree water status and radial growth, either directly or indirectly through reduced soil moisture. Larch rejuvenation ceased in the 1950s, which is partly explained by increasing topsoil desiccation in a warmer climate and a high drought susceptibility of larch germination, as was demonstrated by a germination experiment with variable soil moisture levels. The lack of regeneration and the reduced annual stem increment suggest that sustainable forest management aiming at timber harvesting is no longer feasible in these southern boreal forests. Progressive climate warming is likely to cause a future northward shift of the southern limit of the boreal forest.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\9RT4WB3D\\Dulamsuren et al. - 2013 - Increased Summer Temperatures Reduce the Growth an.pdf},
+  langid = {english},
+  number = {8}
 }
 
 @article{duqueThermophilizationAdultJuvenile2015,
@@ -6147,6 +6204,25 @@
   langid = {english}
 }
 
+@article{raichTemperatureInfluencesCarbon2006,
+  title = {Temperature {{Influences Carbon Accumulation}} in {{Moist Tropical Forests}}},
+  author = {Raich, James W. and Russell, Ann E. and Kitayama, Kanehiro and Parton, William J. and Vitousek, Peter M.},
+  date = {2006},
+  journaltitle = {Ecology},
+  volume = {87},
+  pages = {76--87},
+  issn = {1939-9170},
+  doi = {10.1890/05-0023},
+  url = {http://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/05-0023},
+  urldate = {2021-06-09},
+  abstract = {Evergreen broad-leaved tropical forests can have high rates of productivity and large accumulations of carbon in plant biomass and soils. They can therefore play an important role in the global carbon cycle, influencing atmospheric CO2 concentrations if climate warms. We applied meta-analyses to published data to evaluate the apparent effects of temperature on carbon fluxes and storages in mature, moist tropical evergreen forest ecosystems. Among forests, litter production, tree growth, and belowground carbon allocation all increased significantly with site mean annual temperature (MAT); total net primary productivity (NPP) increased by an estimated 0.2–0.7 Mg C·ha−1·yr−1·°C−1. Temperature had no discernible effect on the turnover rate of aboveground forest biomass, which averaged 0.014 yr−1 among sites. Consistent with these findings, forest biomass increased with site MAT at a rate of 5–13 Mg C·ha−1·°C−1. Despite greater productivity in warmer forests, soil organic matter accumulations decreased with site MAT, with a slope of −8 Mg C·ha−1·°C−1, indicating that decomposition rates of soil organic matter increased with MAT faster than did rates of NPP. Turnover rates of surface litter also increased with temperature among forests. We found no detectable effect of temperature on total carbon storage among moist tropical evergreen forests, but rather a shift in ecosystem structure, from low-biomass forests with relatively large accumulations of detritus in cooler sites, to large-biomass forests with relatively smaller detrital stocks in warmer locations. These results imply that, in a warmer climate, conservation of forest biomass will be critical to the maintenance of carbon stocks in moist tropical forests.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1890/05-0023},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\WJSWU37U\\Raich et al. - 2006 - Temperature Influences Carbon Accumulation in Mois.pdf},
+  keywords = {belowground carbon allocation,carbon cycle,carbon turnover,decomposition,forest biomass,forest productivity,global warming,mean annual temperature,meta-analysis,net primary productivity,soil organic matter,tropical evergreen forests},
+  langid = {english},
+  number = {1}
+}
+
 @online{RainforestModelOffers,
   title = {Rainforest Model Offers Glimpse into Future of the {{Amazon}}},
   url = {https://www.sciencedaily.com/releases/2020/10/201013105801.htm},
@@ -6724,6 +6800,25 @@
   abstract = {Understanding how tropical trees will respond to extreme temperatures and drought is essential to predict how future increases in the severity, frequency and duration of extreme climatic events will affect tropical systems. In this study, we investigated leaf thermotolerance by quantifying the temperatures that resulted in a 50 \% decrease in photosystem II function (T50) in experimentally grown saplings of 12 tree species from a seasonally dry tropical forest. We examined the relationship of thermotolerance with leaf functional traits and photosynthetic rates. Additionally, we tested how water limitation altered thermotolerance within species, and examined the relationship between thermotolerance and drought tolerance among species. Thermotolerance ranged from 44.5 to 48.1 °C in the least and most thermotolerant species, respectively. The observed variation in thermotolerance indicates that the upper limits of leaf function are critically close to maximum temperatures in this region, and that these species will be vulnerable to, and differentially affected by, future warming. Drought increased temperature tolerance, and species that were more drought tolerant were also more thermotolerant. Importantly, thermotolerance was positively related to the key leaf functional trait—leaf mass per area (LMA), and congruent with this, negatively related to photosynthetic rates. These results indicate that more productive species with lower LMA and higher photosynthetic rates may be more vulnerable to heat and drought stress, and more likely to be negatively affected by future increases in extreme climatic events.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\BVR8GD9R\\Sastry et al. - 2018 - Leaf thermotolerance in dry tropical forest tree s.pdf;C\:\\Users\\Me\\Zotero\\storage\\X3TLTTRZ\\4725108.html},
   issue = {plx070}
+}
+
+@article{saxeTreeForestFunctioning2001,
+  title = {Tree and Forest Functioning in Response to Global Warming},
+  author = {Saxe, Henrik and Cannell, Melvin G. R. and Johnsen, Øystein and Ryan, Michael G. and Vourlitis, George},
+  date = {2001},
+  journaltitle = {New Phytologist},
+  volume = {149},
+  pages = {369--399},
+  issn = {1469-8137},
+  doi = {10.1046/j.1469-8137.2001.00057.x},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1046/j.1469-8137.2001.00057.x},
+  urldate = {2021-06-09},
+  abstract = {Although trees have responded to global warming in the past – to temperatures higher than they are now – the rate of change predicted in the 21st century is likely to be unprecedented. Greenhouse gas emissions could cause a 3–6°C increase in mean land surface temperature at high and temperate latitudes. Despite this, few experiments have isolated the effects of temperature for this scenario on trees and forests. This review focuses on tree and forest responses at boreal and temperate latitudes, ranging from the cellular to the ecosystem level. Adaptation to varying temperatures revolves around the trade-off between utilizing the full growing season and minimizing frost damage through proper timing of hardening in autumn and dehardening in spring. But the evolutionary change in these traits must be sufficiently rapid to compensate for the temperature changes. Many species have a positive response to increased temperature – but how close are we to the optima? Management is critical for a positive response of forest growth to a warmer climate, and selection of the best species for the new conditions will be of vital importance. Contents Summary 369 I. Introduction 370 II. Photosynthesis and respiration 370 III. Soil organic matter decomposition and mineralization 373 IV. Phenology and frost hardiness 376 V. Whole tree experimental responses to warming 380 VI. Changes in species distribution at warmer temperatures 381 VII. Adaptation and evolution 383 VIII. Ecosystem level responses to warming 387 Acknowledgements 390 References 390 Appendix I. Temperature response functions 399},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1469-8137.2001.00057.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\U5UYUTNE\\Saxe et al. - 2001 - Tree and forest functioning in response to global .pdf},
+  keywords = {global warming,phenology,physiology,tree and forest functioning},
+  langid = {english},
+  number = {3}
 }
 
 @article{scartazzaInvestigatingEuropeanBeech2016,
@@ -7508,6 +7603,22 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\ZAA9MMTC\\Still et al. - Imaging canopy temperature shedding (thermal) lig.pdf},
   langid = {english},
   number = {n/a}
+}
+
+@article{stinzianoWarmingDelaysAutumn2015,
+  title = {Warming Delays Autumn Declines in Photosynthetic Capacity in a Boreal Conifer, {{Norway}} Spruce ({{Picea}} Abies)},
+  author = {Stinziano, Joseph R. and Hüner, Norman P.A. and Way, Danielle A.},
+  date = {2015-12-01},
+  journaltitle = {Tree Physiology},
+  volume = {35},
+  pages = {1303--1313},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/tpv118},
+  url = {https://doi.org/10.1093/treephys/tpv118},
+  urldate = {2021-06-09},
+  abstract = {Climate change, via warmer springs and autumns, may lengthen the carbon uptake period of boreal tree species, increasing the potential for carbon sequestration in boreal forests, which could help slow climate change. However, if other seasonal cues such as photoperiod dictate when photosynthetic capacity declines, warmer autumn temperatures may have little effect on when carbon uptake capacity decreases in these species. We investigated whether autumn warming would delay photosynthetic decline in Norway spruce (Picea abies (L.) H. Karst.) by growing seedlings under declining weekly photoperiods and weekly temperatures either at ambient temperature or a warming treatment 4\hspace{0.25em}°C above ambient. Photosynthetic capacity was relatively constant in both treatments when weekly temperatures were \&gt;8\hspace{0.25em}°C, but declined rapidly at lower temperatures, leading to a delay in the autumn decline in photosynthetic capacity in the warming treatment. The decline in photosynthetic capacity was not related to changes in leaf nitrogen or chlorophyll concentrations, but was correlated with a decrease in the apparent fraction of leaf nitrogen invested in Rubisco, implicating a shift in nitrogen allocation away from the Calvin cycle at low autumn growing temperatures. Our data suggest that as the climate warms, the period of net carbon uptake will be extended in the autumn for boreal forests dominated by Norway spruce, which could increase total carbon uptake in these forests.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\8PFE72QN\\Stinziano et al. - 2015 - Warming delays autumn declines in photosynthetic c.pdf},
+  number = {12}
 }
 
 @article{stokesBoundaryLayerConductance2006,
@@ -8441,6 +8552,25 @@
   keywords = {Barro Colorado Island,growth rates,leaf mass per area,maximum height,maximum size,mortality rates,Panama,seed mass,seed size,wood density},
   langid = {english},
   number = {12}
+}
+
+@article{wrightFutureTropicalSpecies2009,
+  title = {The {{Future}} of {{Tropical Species}} on a {{Warmer Planet}}},
+  author = {Wright, S. Joseph and Muller-Landau, Helene C. and Schipper, Jan},
+  date = {2009},
+  journaltitle = {Conservation Biology},
+  volume = {23},
+  pages = {1418--1426},
+  issn = {1523-1739},
+  doi = {10.1111/j.1523-1739.2009.01337.x},
+  url = {http://conbio.onlinelibrary.wiley.com/doi/abs/10.1111/j.1523-1739.2009.01337.x},
+  urldate = {2021-06-09},
+  abstract = {Abstract: Modern global temperature and land cover and projected future temperatures suggest that tropical forest species will be particularly sensitive to global warming. Given a moderate greenhouse gas emissions scenario, fully 75\% of the tropical forests present in 2000 will experience mean annual temperatures in 2100 that are greater than the highest mean annual temperature that supports closed-canopy forest today. Temperature-sensitive species might extend their ranges to cool refuges, defined here as areas where temperatures projected for 2100 match 1960s temperatures in the modern range. Distances to such cool refuges are greatest for equatorial species and are particularly large for key tropical forest areas including the Amazon and Congo River Basins, West Africa, and the upper elevations of many tropical mountains. In sum, tropical species are likely to be particularly sensitive to global warming because they are adapted to limited geographic and seasonal variation in temperature, already lived at or near the highest temperatures on Earth before global warming began, and are often isolated from cool refuges. To illustrate these three points, we examined the distributions and habitat associations of all extant mammal species. The distance to the nearest cool refuge exceeded 1000 km for more than 20\% of the tropical and less than 4\% of the extratropical species with small ranges. The biological impact of global warming is likely to be as severe in the tropics as at temperate and boreal latitudes.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1523-1739.2009.01337.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ZIN6EVLV\\Wright et al. - 2009 - The Future of Tropical Species on a Warmer Planet.pdf},
+  keywords = {amenaza de extinción,bosque tropical,calentamiento global,cambio climático,cambio de rango,climate change,cobertura de suelo,cool refuges,extensión de rango,extinction threat,global warming,land cover,mamíferos,mammals,range extension,range shift,refugios frescos,tropical forest},
+  langid = {english},
+  number = {6}
 }
 
 @article{wrightGlobalClimaticDrivers2017,
