--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -327,7 +327,7 @@ Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez
 
 Leaf respiration is lower during the day than the night, due to light-induced inhibition that is highest in high-irradiance and moderate-to-high-temperature and lowest at high-irradiance and low-temperature [@atkinLeafRespirationSnow2000; @keenanWidespreadInhibitionDaytime2019; @zaragoza-castellsDoesGrowthIrradiance2007]. Light-induced inhibition of leaf respiration influences $Q_{10}$ where $Q_{10}$ is greatest in the dark, and decreases with increase in irradiance [@atkinLeafRespirationSnow2000]. 
 
-However, when it comes to sun and shade leaves, a few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves across species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996] and other studies have observed no difference in $Q_{10}$ across species vertical profiles [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999], and at Coweeta, temperate trees showed a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased [@bolstad_foliar_1999](*see their Fig. 1*). (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
+However, when it comes to sun and shade leaves, a few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves across species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996] and other studies have observed no difference in $Q_{10}$ across species vertical profiles and seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008], and at Coweeta, temperate trees showed a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased [@bolstad_foliar_1999](*see their Fig. 1*). (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
 Furthermore, response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] showed no variation in canopy positions of Quercus rubra, whereas on considering site differences, canopy-position effect in respiration was much greater in mesic sites, and seasonal effect was greater in drier sites [@xuSeasonalVariationTemperature2006].  
 
  
@@ -348,7 +348,7 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
 More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)*
 
-Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Accordingly, heat, associated with increase in temperature and VPD even under adequete water can cause greater tree hydraulic stress and altered soil-water dynamics than milder drought, particulary in temperate species [@ruehrWaterAvailabilityDominant2016]. However, soil water loss during drought effects larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate]. Further, heat with drought exacerbates tree stress [@ruehrWaterAvailabilityDominant2016]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
+Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Accordingly, in temperate species, heat stress caused due to increase in temperature and VPD even under adequete water caused greater tree hydraulic stress and altered soil-water dynamics than milder drought [@ruehrWaterAvailabilityDominant2016]. However, soil water loss during drought effects larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
 
 Phenologically in temperate deciduous and mesic forests, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018]. However, late spring, short-term heat waves can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014].
 
@@ -389,7 +389,8 @@ The complex interactions of the biophysical environment and biological--leaf tra
 
 ### canopy disturbance and warming
 
-Canopies are crucial to microclimatic functioning, as they buffer several aspects of the microenvironment [Zelleweger et al. 2019]. This buffering is influenced by the hydraulogical-cycle at large [Davis et al. 2019], therefore severe droughts place canopies at risk, particularly larger trees that suffer more during droughts[Bennett et al. 2015]. Further, increase in global temperatures has shown that canopies of temperate and tropical forests function close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Increase in such canopy $T_{leaf}$ reduces forest GPP [Pau et al. 2018], specifically in the tropics where thermal limits are narrower than temperate forests [Perez and Feeley, 2018].[**to include Teskey 2015; Breashers et al. 2021**]
+Canopies are crucial to microclimatic functioning, as they buffer several aspects of the microenvironment [Zelleweger et al. 2019]. This buffering is influenced by the hydraulogical-cycle at large [Davis et al. 2019], therefore severe droughts place canopies at risk, particularly larger trees that suffer more during droughts[Bennett et al. 2015]. Further, increase in global temperatures has shown that canopies of temperate and tropical forests function close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Increase in such canopy $T_{leaf}$ reduces forest GPP [Pau et al. 2018], specifically in the tropics where thermal limits are narrower than temperate forests [Perez and Feeley, 2018]. Further, warm-season associated with increased VPD, along with drought exacerbates tree stress at a regional scale, with implications for forest structure [@parkwilliamsTemperaturePotentDriver2013]
+[**to include Teskey 2015; Breashers et al. 2021**]
 
 Canopy structure affects understory species composition and soil fertility which has been shown to shift under macroclimatic warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Macroclimatic warming will disproportionately affect the less warm-adapted functional types within the forest canopy, despite buffering dampening extreme effects, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), with associated understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. This imposes an increasing threat to fauna in microrefugias that are  otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013].
 
