--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -255,7 +255,7 @@ Exposed-canopy leaves are better adapted to heat and water stress than shaded-le
 
 #### Biochemical and physiological traits
 
-The vertical distribution of biochemical traits enables photosynthesis and metabolic processes, and protects against heat and light damage in exposed canopy leaves. Particualy, $N_{area}$ that is typically greater in the direction of new leaf growth [@niinemetsPhotosynthesisResourceDistribution2007a], optimizes to prevent photoinhition along sun-leaves and, shade-leaves during sunflecks [@kitaoCanopyNitrogenDistribution2018]. Similarly, carotenoids and xanthophyll pigments-violaxanthin, antheraxanthin and zeaxanthin [$VAZ$], an antioxidant scavenging function- convert excess light to heat dissaptation [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Constraints to biochemical traits, particularly $VAZ$ can curb increasing temperature acclimation [@kumarathungeAcclimationAdaptationComponents2019a]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed-canopies, making these species particularly advantageous [*REF*].
+These traits protect leaves along the vertical profile from photo-damage and heat stress, and are crucial to the functioning of photosynthesis and metabolism. Biochemically, caratenoids and xanthophyll pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--an antioxidant scavenging function--convert excess light to heat dissaptaion [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Evidence also shows that $VAZ$ enables leaf acclimation to higher temperature [@kumarathungeAcclimationAdaptationComponents2019a]. Along with $VAZ$, Narea optimizes to prevent photo-inhibition during direct light and sunflecks in sun- and shade leaves, respectively, and is typically greater in the direction of new leaf growth [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed-canopies, making these species particularly advantageous [*REF*].
 
 ### Interspecific variation 
 
